{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 1996,
  "lineage": "909c2980-e7cf-c07a-378c-fe277f786612",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b12fe769db3d6f21",
            "association_id": "eipassoc-0ccfd7479756dbdc6",
            "domain": "vpc",
            "id": "eipalloc-0b12fe769db3d6f21",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-07d199f14ead5ab85",
            "private_dns": "ip-10-110-99-108.eu-central-1.compute.internal",
            "private_ip": "10.110.99.108",
            "public_dns": "ec2-3-78-23-184.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.78.23.184",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c602e0f95d4f4312",
            "association_id": "eipassoc-08d8131e4f7e475be",
            "domain": "vpc",
            "id": "eipalloc-0c602e0f95d4f4312",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0ae3b1ed2ce40381d",
            "private_dns": "ip-10-110-99-140.eu-central-1.compute.internal",
            "private_ip": "10.110.99.140",
            "public_dns": "ec2-3-64-220-9.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.64.220.9",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f47ae52c8f014ea2",
            "association_id": "eipassoc-00a5ce9da2ab50042",
            "domain": "vpc",
            "id": "eipalloc-0f47ae52c8f014ea2",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-004d4dad7f4d1fa98",
            "private_dns": "ip-10-110-99-174.eu-central-1.compute.internal",
            "private_ip": "10.110.99.174",
            "public_dns": "ec2-3-73-104-192.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.73.104.192",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sergio-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030657883578:internet-gateway/igw-057c6016619e3419d",
            "id": "igw-057c6016619e3419d",
            "owner_id": "030657883578",
            "tags": {
              "Name": "sergio-internet-gateway"
            },
            "tags_all": {
              "Name": "sergio-internet-gateway"
            },
            "vpc_id": "vpc-03d27e6063645ef4a"
          },
          "dependencies": [
            "aws_vpc.sergio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "sergio-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:030657883578:loadbalancer/app/sergio-lb/5f5718933a184a2f",
            "arn_suffix": "app/sergio-lb/5f5718933a184a2f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "sergio-lb-1618962696.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:030657883578:loadbalancer/app/sergio-lb/5f5718933a184a2f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sergio-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e7e487ac669b8796"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-010c16b8b4897c1da"
              },
              {
                "subnet_id": "subnet-02d6ae9a429847ada"
              },
              {
                "subnet_id": "subnet-060f0114609b0feb9"
              }
            ],
            "subnets": [
              "subnet-010c16b8b4897c1da",
              "subnet-02d6ae9a429847ada",
              "subnet-060f0114609b0feb9"
            ],
            "tags": {
              "Environment": "sergio-lb"
            },
            "tags_all": {
              "Environment": "sergio-lb"
            },
            "vpc_id": "vpc-03d27e6063645ef4a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_subnet.public-subnets",
            "aws_vpc.sergio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sergio-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:030657883578:listener/app/sergio-lb/5f5718933a184a2f/062fe3fccb6514e6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:030657883578:targetgroup/sergio-tg/29b8c3e3a5db52d8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:030657883578:listener/app/sergio-lb/5f5718933a184a2f/062fe3fccb6514e6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:030657883578:loadbalancer/app/sergio-lb/5f5718933a184a2f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.sergio-load-balancer",
            "aws_lb_target_group.sergio-tg",
            "aws_security_group.lb-sg",
            "aws_subnet.public-subnets",
            "aws_vpc.sergio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sergio-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:030657883578:targetgroup/sergio-tg/29b8c3e3a5db52d8",
            "arn_suffix": "targetgroup/sergio-tg/29b8c3e3a5db52d8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:030657883578:targetgroup/sergio-tg/29b8c3e3a5db52d8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sergio-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03d27e6063645ef4a"
          },
          "dependencies": [
            "aws_vpc.sergio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sergio-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b12fe769db3d6f21",
            "connectivity_type": "public",
            "id": "nat-0457ce5d5e916f897",
            "network_interface_id": "eni-07d199f14ead5ab85",
            "private_ip": "10.110.99.108",
            "public_ip": "3.78.23.184",
            "subnet_id": "subnet-02d6ae9a429847ada"
          },
          "dependencies": [
            "aws_eip.nat-eips",
            "aws_subnet.public-subnets",
            "aws_vpc.sergio-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c602e0f95d4f4312",
            "connectivity_type": "public",
            "id": "nat-08d8f8c7a9a7b408a",
            "network_interface_id": "eni-0ae3b1ed2ce40381d",
            "private_ip": "10.110.99.140",
            "public_ip": "3.64.220.9",
            "subnet_id": "subnet-060f0114609b0feb9"
          },
          "dependencies": [
            "aws_eip.nat-eips",
            "aws_subnet.public-subnets",
            "aws_vpc.sergio-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f47ae52c8f014ea2",
            "connectivity_type": "public",
            "id": "nat-09563cd5ef91f12af",
            "network_interface_id": "eni-004d4dad7f4d1fa98",
            "private_ip": "10.110.99.174",
            "public_ip": "3.73.104.192",
            "subnet_id": "subnet-010c16b8b4897c1da"
          },
          "dependencies": [
            "aws_eip.nat-eips",
            "aws_subnet.public-subnets",
            "aws_vpc.sergio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030657883578:route-table/rtb-02324fec751ce560b",
            "id": "rtb-02324fec751ce560b",
            "owner_id": "030657883578",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0457ce5d5e916f897",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sergio-route-table 1"
            },
            "tags_all": {
              "Name": "sergio-route-table 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d27e6063645ef4a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eips",
            "aws_nat_gateway.sergio-nat-gateway",
            "aws_subnet.public-subnets",
            "aws_vpc.sergio-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030657883578:route-table/rtb-068aa1011fcd07c0b",
            "id": "rtb-068aa1011fcd07c0b",
            "owner_id": "030657883578",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08d8f8c7a9a7b408a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sergio-route-table 2"
            },
            "tags_all": {
              "Name": "sergio-route-table 2"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d27e6063645ef4a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eips",
            "aws_nat_gateway.sergio-nat-gateway",
            "aws_subnet.public-subnets",
            "aws_vpc.sergio-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030657883578:route-table/rtb-06b52ba76e6e4332b",
            "id": "rtb-06b52ba76e6e4332b",
            "owner_id": "030657883578",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09563cd5ef91f12af",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sergio-route-table 3"
            },
            "tags_all": {
              "Name": "sergio-route-table 3"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d27e6063645ef4a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eips",
            "aws_nat_gateway.sergio-nat-gateway",
            "aws_subnet.public-subnets",
            "aws_vpc.sergio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030657883578:route-table/rtb-0cb6e1f53e6833214",
            "id": "rtb-0cb6e1f53e6833214",
            "owner_id": "030657883578",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-057c6016619e3419d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public subnet route table"
            },
            "tags_all": {
              "Name": "public subnet route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d27e6063645ef4a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sergio-igw",
            "aws_vpc.sergio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "asso-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00082ee66ceed784e",
            "route_table_id": "rtb-02324fec751ce560b",
            "subnet_id": "subnet-05bf7ab82c464caac"
          },
          "dependencies": [
            "aws_eip.nat-eips",
            "aws_nat_gateway.sergio-nat-gateway",
            "aws_route_table.private_route_tables",
            "aws_subnet.private_subnets",
            "aws_subnet.public-subnets",
            "aws_vpc.sergio-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a61bc67ce8f92b81",
            "route_table_id": "rtb-068aa1011fcd07c0b",
            "subnet_id": "subnet-0349e79be4b924ca6"
          },
          "dependencies": [
            "aws_eip.nat-eips",
            "aws_nat_gateway.sergio-nat-gateway",
            "aws_route_table.private_route_tables",
            "aws_subnet.private_subnets",
            "aws_subnet.public-subnets",
            "aws_vpc.sergio-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024ad1a94268a3480",
            "route_table_id": "rtb-06b52ba76e6e4332b",
            "subnet_id": "subnet-0d78a2ef9373ca25d"
          },
          "dependencies": [
            "aws_eip.nat-eips",
            "aws_nat_gateway.sergio-nat-gateway",
            "aws_route_table.private_route_tables",
            "aws_subnet.private_subnets",
            "aws_subnet.public-subnets",
            "aws_vpc.sergio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_for_pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d3e4e8a3e871a7e",
            "route_table_id": "rtb-0cb6e1f53e6833214",
            "subnet_id": "subnet-02d6ae9a429847ada"
          },
          "dependencies": [
            "aws_internet_gateway.sergio-igw",
            "aws_route_table.public_rt",
            "aws_subnet.public-subnets",
            "aws_vpc.sergio-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060c4aa33d21607d6",
            "route_table_id": "rtb-0cb6e1f53e6833214",
            "subnet_id": "subnet-060f0114609b0feb9"
          },
          "dependencies": [
            "aws_internet_gateway.sergio-igw",
            "aws_route_table.public_rt",
            "aws_subnet.public-subnets",
            "aws_vpc.sergio-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7d93b08c74f951e",
            "route_table_id": "rtb-0cb6e1f53e6833214",
            "subnet_id": "subnet-010c16b8b4897c1da"
          },
          "dependencies": [
            "aws_internet_gateway.sergio-igw",
            "aws_route_table.public_rt",
            "aws_subnet.public-subnets",
            "aws_vpc.sergio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030657883578:security-group/sg-0e7e487ac669b8796",
            "description": "access to the lb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7e487ac669b8796",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-sg",
            "name_prefix": "",
            "owner_id": "030657883578",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03d27e6063645ef4a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sergio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sergio-asg-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030657883578:security-group/sg-00fb1e5c335667b12",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00fb1e5c335667b12",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-asg-sg",
            "name_prefix": "",
            "owner_id": "030657883578",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03d27e6063645ef4a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sergio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3392897207",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00fb1e5c335667b12",
            "security_group_rule_id": "sgr-0cc18fce3501f961e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sergio-asg-sg",
            "aws_vpc.sergio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2092031234",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00fb1e5c335667b12",
            "security_group_rule_id": "sgr-03c0fdc74bffb4c74",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sergio-asg-sg",
            "aws_vpc.sergio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3052191587",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00fb1e5c335667b12",
            "security_group_rule_id": "sgr-0a2e46ce681d2dc4f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sergio-asg-sg",
            "aws_vpc.sergio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sinbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2987515555",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e7e487ac669b8796",
            "security_group_rule_id": "sgr-0ddb499ecba8e9265",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_vpc.sergio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sinbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-77300502",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e7e487ac669b8796",
            "security_group_rule_id": "sgr-0f57ee11810aa05bc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_vpc.sergio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "soutbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-825466837",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e7e487ac669b8796",
            "security_group_rule_id": "sgr-0cd003c60e92096ea",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_vpc.sergio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030657883578:subnet/subnet-05bf7ab82c464caac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.110.99.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bf7ab82c464caac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "030657883578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private subnet 1"
            },
            "tags_all": {
              "Name": "Private subnet 1"
            },
            "vpc_id": "vpc-03d27e6063645ef4a"
          },
          "dependencies": [
            "aws_vpc.sergio-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030657883578:subnet/subnet-0349e79be4b924ca6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.110.99.32/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0349e79be4b924ca6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "030657883578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private subnet 2"
            },
            "tags_all": {
              "Name": "Private subnet 2"
            },
            "vpc_id": "vpc-03d27e6063645ef4a"
          },
          "dependencies": [
            "aws_vpc.sergio-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030657883578:subnet/subnet-0d78a2ef9373ca25d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.110.99.64/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d78a2ef9373ca25d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "030657883578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private subnet 3"
            },
            "tags_all": {
              "Name": "Private subnet 3"
            },
            "vpc_id": "vpc-03d27e6063645ef4a"
          },
          "dependencies": [
            "aws_vpc.sergio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030657883578:subnet/subnet-02d6ae9a429847ada",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.110.99.96/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d6ae9a429847ada",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "030657883578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public subnet 1"
            },
            "tags_all": {
              "Name": "Public subnet 1"
            },
            "vpc_id": "vpc-03d27e6063645ef4a"
          },
          "dependencies": [
            "aws_vpc.sergio-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030657883578:subnet/subnet-060f0114609b0feb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.110.99.128/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060f0114609b0feb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "030657883578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public subnet 2"
            },
            "tags_all": {
              "Name": "Public subnet 2"
            },
            "vpc_id": "vpc-03d27e6063645ef4a"
          },
          "dependencies": [
            "aws_vpc.sergio-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030657883578:subnet/subnet-010c16b8b4897c1da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.110.99.160/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010c16b8b4897c1da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "030657883578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public subnet 3"
            },
            "tags_all": {
              "Name": "Public subnet 3"
            },
            "vpc_id": "vpc-03d27e6063645ef4a"
          },
          "dependencies": [
            "aws_vpc.sergio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sergio-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:030657883578:vpc/vpc-03d27e6063645ef4a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.110.99.0/24",
            "default_network_acl_id": "acl-0f00b85e2cd7bd953",
            "default_route_table_id": "rtb-011f1485d75a2a4d0",
            "default_security_group_id": "sg-0d252891e485e6806",
            "dhcp_options_id": "dopt-02b6c8a49ee183107",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03d27e6063645ef4a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-011f1485d75a2a4d0",
            "owner_id": "030657883578",
            "tags": {
              "Name": "sergio-vpc-1"
            },
            "tags_all": {
              "Name": "sergio-vpc-1"
            }
          }
        }
      ]
    }
  ]
}